apps/argo-rollouts/envs/gke-prod-01/devm-k01/httproute-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
  annotations:
    argocd.argoproj.io/sync-options: ServerSideApply=true
spec:
  parentRefs:
  - name: shared-gateway-int
    group: gateway.networking.k8s.io
    kind: Gateway
    namespace: gateway-api
  hostnames: ["argo-rollouts.jksoam.in"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: argo-rollouts-dashboard
      port: 3100
      weight: 1
